--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "gracenote/gracenote",
-    "description": "A PHP library for abstracting the Gracenote API",
+    "name": "echonest/echonest",
+    "description": "A PHP library for abstracting the Echonest API",
     "type": "library",
     "license": "MIT",
     "keywords": [
-        "gracenote",
+        "echonest",
         "music",
         "zf2"
     ],
@@ -12,7 +12,7 @@
         "php": ">=5.3.3",
         "zendframework/zendframework": "2.*,!=2.0.6"
     },
-    "homepage": "http://developer.gracenote.com",
+    "homepage": "http://developer.echonest.com/docs/v4/contents.html",
     "authors": [
         {
             "name": "Tom Anderson",
@@ -22,7 +22,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "Gracenote": "src/"
+            "Echonest": "src/"
         }
     }
 }
