--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         }
     ],
     "autoload": {
-        "psr-0": {
-            "Echonest": "src/"
+        "psr-4": {
+            "Echonest\\": "src/"
         }
     }
 }
